<resources>
    <string name="app_name">Proyecto Integrador</string>
    <string name="title_menu">Menu</string>
    <string name="title_localizaciones">Localizaciones</string>
    <string name="title_recibo">Recibo</string>
    <string name="nueva_orden_subj">Recibo de la Oreden</string>
    <string name="titulo">Titulo</string>
    <string name="txt_lista_vacia">La lista esta vacia</string>
    <string name="moneda">$</string>
    <string name="numero_uno">1</string>
    <string name="descripcion">Descripcion</string>
    <string name="comprar">Comprar</string>
    <string name="recibo_orden">Recibo de la Orden</string>
    <string name="pagar_recibo">Pagar Recibo</string>
    <string name="cancelar_orden">Cancelar Orden</string>
    <string name="cantidad">Cantidad</string>
    <string name="precio_total">Precio Total</string>
    <string name="total">Total: </string>
    <string name="incia_sesion">Inicia sesión</string>
    <string name="email">Email:</string>
    <string name="contraseña">Contraseña</string>
    <string name="no_tienes_cuenta">No tienes una cuenta?</string>
    <string name="registrarse">Registrarse</string>
    <string name="registrar">Registrar</string>
    <string name="acceder">Acceder</string>
    <string name="proveedor">Proveedor:</string>
    <string name="cerrar_sesion">Cerrar Sesion</string>
    <string name="title_sesion">Sesion</string>
    <string name="sesion_activa">Sesion Activa</string>
    <string name="google">Google</string>
    <string name="facebook">Facebook</string>
    <string name="prefs_file">com.example.proyecto_integrador.PREFERENCE_FILE_KEY</string>
    <string name="facebook_app_id">1072170746958603</string>
    <string name="fb_login_protocol_scheme">fb1072170746958603</string>


    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
</resources>