<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/containerp1"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ui.login.Login1Fragment">

    <TextView
        android:id="@+id/textView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/incia_sesion"
        android:textSize="24sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="5dp"
        android:orientation="vertical"
        android:paddingLeft="10dp"
        android:paddingRight="10dp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView">

        <EditText
            android:id="@+id/et_emailp1"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:ems="10"
            android:hint="@string/email"
            android:inputType="textEmailAddress"
            android:minHeight="48dp" />

        <Space
            android:layout_width="wrap_content"
            android:layout_height="10dp"
            android:layout_weight="1" />

        <EditText
            android:id="@+id/et_passwordp1"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:ems="10"
            android:hint="@string/contraseña"
            android:inputType="textPassword"
            android:minHeight="48dp" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="horizontal">

            <Button
                android:id="@+id/btn_registrarp1"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginRight="5dp"
                android:layout_weight="1"
                android:background="@color/orange_1"
                android:text="@string/registrar"
                tools:ignore="TextContrastCheck,TextContrastCheck" />

            <Button
                android:id="@+id/btn_accederp1"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginRight="5dp"
                android:layout_weight="1"
                android:background="@color/orange_1"
                android:text="@string/acceder"
                tools:ignore="TextContrastCheck" />
        </LinearLayout>

        <Button
            android:id="@+id/buttonp1"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="Button" />
        <Space
            android:layout_width="match_parent"
            android:layout_height="wrap_content" />

        <Button
            android:id="@+id/btn_googlep1"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"

            android:drawablePadding="5dp"
            android:paddingStart="16dp"
            android:text="@string/google"
            android:textAlignment="textStart"
            android:textColor="@color/black" />
    </LinearLayout>
</androidx.constraintlayout.widget.ConstraintLayout>

    <!--  android:background="@color/white"
               android:drawableStart="@drawable/logo_google"-->