<?xml version="1.0" encoding="utf-8"?>
<navigation xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/mobile_navigation"
    app:startDestination="@+id/navigation_menu">

    <fragment
        android:id="@+id/navigation_menu"
        android:name="com.example.proyecto_integrador.ui.menu.MenuFragment"
        android:label="@string/title_menu"
        tools:layout="@layout/fragment_menu" >
        <action
            android:id="@+id/action_navigation_menu_to_fragmentDetails"
            app:destination="@id/fragmentDetails"
            app:popUpToInclusive="false" />
    </fragment>

    <fragment
        android:id="@+id/navigation_map"
        android:name="com.example.proyecto_integrador.ui.maps.MapsFragment"
        android:label="@string/title_localizaciones"
        tools:layout="@layout/fragment_maps" />

    <fragment
        android:id="@+id/navigation_ticket"
        android:name="com.example.proyecto_integrador.ui.ticket.TicketFragment"
        android:label="@string/title_recibo"
        tools:layout="@layout/fragment_ticket" />
    <fragment
        android:id="@+id/fragmentDetails"
        android:name="com.example.proyecto_integrador.FragmentDetails"
        android:label="FragmentDetails" >
        <action
            android:id="@+id/action_fragmentDetails_to_navigation_menu"
            app:destination="@id/navigation_menu"
            app:popUpTo="@id/navigation_menu"
            app:popUpToInclusive="true" />
    </fragment>
</navigation>