<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ui.ticket.TicketFragment">

    <TextView
        android:id="@+id/tv_orden"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="28dp"
        android:text="@string/recibo_orden"
        android:textSize="38sp"
        android:textStyle="bold"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        tools:layout_editor_absoluteX="16dp"
        tools:layout_editor_absoluteY="28dp">

        <ScrollView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="40dp"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical">


                <androidx.recyclerview.widget.RecyclerView
                    android:id="@+id/V_recyclerView"
                    android:layout_width="match_parent"
                    android:layout_height="466dp"
                    android:layout_marginTop="15dp"
                    app:layout_constraintBottom_toBottomOf="parent"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintHorizontal_bias="0.0"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toBottomOf="@+id/tv_orden">

                </androidx.recyclerview.widget.RecyclerView>

                <TextView
                    android:id="@+id/tv_total"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="TextView"
                    android:textSize="24sp"
                    android:layout_gravity="right"
                    android:layout_marginRight="14dp"/>

                <Button
                    android:id="@+id/btn_pagar"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_margin="16dp"

                    android:layout_marginStart="123dp"
                    android:layout_marginTop="30dp"
                    android:layout_marginEnd="231dp"
                    android:background="@color/orange_2"
                    android:elevation="3dp"
                    android:text="@string/pagar_recibo"
                    android:textColor="#ffffff"
                    android:textSize="24sp"
                    android:textStyle="bold"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toBottomOf="@+id/V_recyclerView"
                    android:layout_marginRight="14dp"
                    android:layout_marginLeft="14dp"/>

                <Button
                    android:id="@+id/btn_cancelar"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_margin="16dp"

                    android:layout_marginStart="123dp"
                    android:layout_marginLeft="14dp"
                    android:layout_marginTop="1dp"
                    android:layout_marginEnd="231dp"
                    android:layout_marginRight="14dp"
                    android:background="@color/orange_2"
                    android:elevation="3dp"
                    android:text="@string/cancelar_orden"
                    android:textColor="#ffffff"
                    android:textSize="24sp"
                    android:textStyle="bold"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toBottomOf="@+id/btn_pagar" />

            </LinearLayout>
        </ScrollView>
    </androidx.constraintlayout.widget.ConstraintLayout>


</androidx.constraintlayout.widget.ConstraintLayout>
